@@ -7,6 +7,7 @@ Bundle-Activator: org.netxms.ui.eclipse.dashboard.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
+ org.eclipse.core.expressions;bundle-version="3.4.400",
  org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.6",
  org.netxms.ui.eclipse.console;bundle-version="2.0.5",
  org.netxms.ui.eclipse.charts;bundle-version="2.0.3",
