@@ -348,5 +348,73 @@
             sequence="M1+F3">
       </key>
    </extension>
+   <extension
+         point="org.eclipse.ui.menus">
+      <menuContribution
+            allPopups="false"
+            locationURI="popup:org.eclipse.ui.popup.any?after=datacollection">
+         <dynamic
+               class="org.netxms.ui.eclipse.dashboard.DashboardsDynamicMenu"
+               id="org.netxms.ui.eclipse.dashboard.DashboardsDynamicMenu">
+            <visibleWhen
+                  checkEnabled="false">
+               <and>
+                  <count
+                        value="1">
+                  </count>
+                  <iterate
+                        ifEmpty="false"
+                        operator="and">
+                     <and>
+                        <or>
+                           <instanceof
+                                 value="org.netxms.client.objects.Container">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.ServiceRoot">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.Subnet">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.Cluster">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.Zone">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.EntireNetwork">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.Node">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.Condition">
+                           </instanceof>
+                           <instanceof
+                                 value="org.netxms.client.objects.MobileDevice">
+                           </instanceof>
+                        </or>
+                        <test
+                              forcePluginActivation="true"
+                              property="org.netxms.ui.eclipse.dashboard.hasDashboards">
+                        </test>
+                     </and>
+                  </iterate>
+               </and>
+            </visibleWhen>
+         </dynamic>
+      </menuContribution>
+   </extension>
+   <extension
+         point="org.eclipse.core.expressions.propertyTesters">
+      <propertyTester
+            class="org.netxms.ui.eclipse.dashboard.DashboardObjectPropertyTester"
+            id="org.netxms.ui.eclipse.dashboard.DashboardObjectPropertyTester"
+            namespace="org.netxms.ui.eclipse.dashboard"
+            properties="hasDashboards"
+            type="org.netxms.client.objects.AbstractObject">
+      </propertyTester>
+   </extension>
 
 </plugin>
