@@ -7,6 +7,7 @@ Bundle-Activator: org.netxms.ui.eclipse.dashboard.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.rap.ui;bundle-version="2.3.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
+ org.eclipse.core.expressions;bundle-version="3.4.600",
  org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.6",
  org.netxms.webui.core;bundle-version="2.0.5",
  org.netxms.ui.eclipse.objectbrowser;bundle-version="2.0.3",
