@@ -22,6 +22,7 @@
 	- Web console use client time zone to display time
 	- Added option to use server time zone to display time in console
 	- Access to event log, SNMP trap log, and syslog from object context menu
+	- Dashboards can be associated with other objects (nodes, containers, etc.) and opened from object's context menu
 - Fixed issues: #786, #831, #841, #852, #864, #890, #892, #896, #897, #898, #900, #902, #903, #905, #913, #917, #919, #921, #928, #933, #945, #947
 
 
